--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,30 @@ body {
 
 /* End */
 
-.logo {
+.brand {
     @apply text-xl font-semibold
+}
+
+.input {
+    @apply bg-transparent outline-none border rounded-md px-2 py-1 border-text-l/50 dark:border-text-d/50
+}
+
+.btn {
+    @apply px-2 py-1
+}
+
+.btn-outlined {
+    @apply px-2 py-1 border rounded-md border-text-l/50 dark:border-text-d/50
+}
+
+.icon-sm {
+    @apply h-4 w-4 cursor-pointer
+}
+
+.icon {
+    @apply h-6 w-6 cursor-pointer
+}
+
+.icon-lg {
+    @apply h-8 w-8 cursor-pointer
 }
