--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,10 @@ body {
     @apply flex flex-col
 }
 
+.fr-ic {
+    @apply flex items-center
+}
+
 .fr-ic-jb {
     @apply flex items-center justify-between
 }
